fixed: The error message now does not break the layout. A style is defined for the error message. Fixed message encoding. HW 26-1

--- a/css/style.css
+++ b/css/style.css
@@ -820,6 +820,7 @@ img {
   .control__input-group {
     display: flex;
     flex-direction: column;
+    position: relative;
     flex-basis: 30%; }
   .control__input {
     color: #363636; }
@@ -840,7 +841,8 @@ img {
     padding: 1.286rem 4.786rem; }
   .control__policy {
     flex-basis: 100%;
-    margin-top: 1.2rem; }
+    margin-top: 1.2rem;
+    position: relative; }
     .control__policy-label {
       justify-content: center; }
 
@@ -1046,6 +1048,7 @@ img {
     justify-content: space-between;
     flex-wrap: wrap; }
   .footer__input-group {
+    position: relative;
     display: flex;
     flex-direction: column;
     max-width: 16.5rem;
@@ -1059,6 +1062,7 @@ img {
     .footer__input-group:nth-of-type(3) {
       margin-bottom: 1.8rem; }
   .footer__policy {
+    position: relative;
     flex-basis: 100%;
     margin-bottom: 3.5rem; }
   .footer__button {
@@ -1148,7 +1152,8 @@ img {
       margin-bottom: 1rem; }
     .modal__input-group {
       display: flex;
-      flex-direction: column; }
+      flex-direction: column;
+      position: relative; }
     .modal__input--light::-webkit-input-placeholder {
       color: #fff;
       opacity: 1; }
@@ -1165,9 +1170,25 @@ img {
       color: #fff;
       opacity: 1; }
   .modal__policy {
+    position: relative;
     margin-bottom: 2.7rem; }
+    .modal__policy > .invalid {
+      left: 0;
+      bottom: -1.5rem; }
   .modal__button {
     align-self: flex-end; }
+
+div.invalid {
+  position: absolute;
+  background-color: rgba(255, 0, 0, 0.3);
+  color: #fff;
+  text-align: center;
+  padding: 1px;
+  right: 0;
+  bottom: -1.3rem; }
+
+.policy > div.invalid {
+  width: 100%; }
 
 .projects {
   padding-bottom: 30rem; }
