--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -48,6 +48,7 @@
   &__input-group
     display: flex
     flex-direction: column
+    position: relative
     flex-basis: 30%
   &__input
     color: $darkGray
@@ -61,6 +62,7 @@
   &__policy
     flex-basis: 100%
     margin-top: 1.2rem
+    position: relative
     &-label
       justify-content: center
 .video
