--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -38,6 +38,7 @@
     justify-content: space-between
     flex-wrap: wrap
   &__input-group
+    position: relative
     display: flex
     flex-direction: column
     max-width: 16.5rem
@@ -51,6 +52,7 @@
     &:nth-of-type(3)
       margin-bottom: 1.8rem
   &__policy
+    position: relative
     flex-basis: 100%
     margin-bottom: 3.5rem
   &__button
